# Knight_Engine_2D

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/core/: config.h  engine.c  engine.h  game_logic.c  game_logic.h  game_state.h
src/graphics/: camera.c  camera.h  renderer.c  renderer.h  sprite.c  sprite.h  texture.c  texture.h  tile.c  tile.h
src/input/: input.c  input.h  input_config.h
src/util/: debug.c  debug.h  timer.c  timer.h
